Get volttron running on CT-network with CT(Delta) controllers.

--- a/services/core/Platform/config
+++ b/services/core/Platform/config
@@ -1,6 +1,7 @@
 {
     # Agent id is used in the display on volttron central.
-    "agentid": "Central Platform",
+    #"agentid": "Central Platform",
+    "agentid": "Node 1",
     
     # Configuration parameters.
     #
