--- a/services/core/WeatherAgent/weatheragent.config
+++ b/services/core/WeatherAgent/weatheragent.config
@@ -1,8 +1,8 @@
 {
     "agentid": "Weather1",
-    "poll_time": 3600,
+    "poll_time": 900,
     "minute_threshold" : 5,
     "daily_threshold" : 500,
-    "zip" : "37918",
+    "zip" : "V3S1C7",
     "on_request_only": false
 }
